# https://github.com/bazelbuild/rules_python/releases
bazel_dep(name = "rules_python", version = "1.0.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.12")
use_repo(python, "python_3_12")

# Auto detect if system local Python can be used.
register_toolchains("@bazel_tools//tools/python:autodetecting_toolchain")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = "3.12",
    requirements_lock = "//third_party:requirements_lock.txt",
)
use_repo(pip, "pip")
